aws-eks/08-elb-application-load-balancers/03-alb-ingress-context-path-based-routing/kube-manifests/01-nginx-app1-deployment-and-node-port-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-app1-deployment
  labels:
    app: nginx-app1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-app1
  template:
    metadata:
      labels:
        app: nginx-app1
    spec:
      containers:
        - name: nginx-app1
          image: ssamantr/kube-nginx-app1:1.0.0
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-app1-service
  labels:
    app: nginx-app1
  annotations:
    # Important Note: Need to add health check path annotations in service level if we are planning to use multiple targets in a load balancer
    alb.ingress.kubernetes.io/healthcheck-path: /app1/index.html
spec:
  type: NodePort
  selector:
    app: nginx-app1
  ports:
    - port: 80
      targetPort: 80
