aws-eks/08-elb-application-load-balancers/03-alb-ingress-context-path-based-routing/kube-manifests/02-nginx-app2-deployment-and-node-port-service.yaml.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-app2-deployment
  labels:
    app: nginx-app2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-app2
  template:
    metadata:
      labels:
        app: nginx-app2
    spec:
      containers:
        - name: app2-nginx
          image: ssamantr/kube-nginx-app2:1.0.0
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-app2-service
  labels:
    app: nginx-app2
  annotations:
    # Important Note: Need to add health check path annotations in service level if we are planning to use multiple targets in a load balancer
    alb.ingress.kubernetes.io/healthcheck-path: /app2/index.html
spec:
  type: NodePort
  selector:
    app: nginx-app2
  ports:
    - port: 80
      targetPort: 80
