aws-eks/08-elb-application-load-balancers/03-alb-ingress-context-path-based-routing/kube-manifests/03-nginx-app3-deployment-and-node-port-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-app3-deployment
  labels:
    app: nginx-app3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-app3
  template:
    metadata:
      labels:
        app: nginx-app3
    spec:
      containers:
        - name: nginx-app3
          image: ssamantr/kube-nginx-app3:1.0.0
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-app3-service
  labels:
    app: nginx-app3
  annotations:
    # Important Note: Need to add health check path annotations in service level if we are planning to use multiple targets in a load balancer
    alb.ingress.kubernetes.io/healthcheck-path: /app3/index.html
spec:
  type: NodePort
  selector:
    app: nginx-app3
  ports:
    - port: 80
      targetPort: 80
