aws-eks/08-elb-application-load-balancers/03-alb-ingress-context-path-based-routing/kube-manifests/04-alb-ingress-context-path-based-routing.yaml
# Annotations Reference: https://kubernetes-sigs.github.io/aws-load-balancer-controller/latest/guide/ingress/annotations/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: context-path-routing-ingress
  annotations:
    # Load Balancer Name
    alb.ingress.kubernetes.io/load-balancer-name: cpr-ingress-lb
    # Ingress Core Settings
    #kubernetes.io/ingress.class: "alb" (old ingress class annotation - still works but recommended to use IngressClass Resource)
    alb.ingress.kubernetes.io/scheme: internet-facing
    # Health Check Settings
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP 
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    #Important Note:  Need to add health check path annotations in service level if we are planning to use multiple targets in a load balancer    
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '10'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'   
spec:
  ingressClassName: aws-ingress-class  # Ingress Class
  rules:
    - http:
        paths:           
          - path: /app2
            pathType: Prefix
            backend:
              service:
                name: nginx-app2-service
                port: 
                  number: 80
          - path: /app3
            pathType: Prefix
            backend:
              service:
                name: nginx-app3-service
                port: 
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-app1-service
                port: 
                  number: 80                     
             

# Important Note-1: In path based routing order is very important, if we are going to use  "/*" (Root Context), try to use it at the end of all rules.                                        
                        
# 1. If  "spec.ingressClassName: aws-ingress-class" not specified, will reference default ingress class on this kubernetes cluster
# 2. Default Ingress class is nothing but for which ingress class we have the annotation `ingressclass.kubernetes.io/is-default-class: "true"`
